# FreeDi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  freedi.c  goodi.c
